--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,12 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: [23, 24, 25]
-        elixir: [1.14]
+        otp: [25]
+        elixir: [1.15]
 
     env:
       MIX_ENV: test
-      ImageOS: ubuntu20 # equivalent to runs-on ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v3
@@ -25,16 +24,16 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: ${{matrix.elixir}} # Define the elixir version [required]
-          otp-version: ${{matrix.otp}} # Define the OTP version [required]
+          elixir-version: ${{matrix.elixir}} 
+          otp-version: ${{matrix.otp}}
 
-      - uses: actions/cache@v1
+      - uses: actions/cache@v4
         id: deps-cache
         with:
           path: deps
           key: ${{ runner.os }}-mix-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
 
-      - uses: actions/cache@v1
+      - uses: actions/cache@v4
         id: build-cache
         with:
           path: _build
